@@ -100,6 +100,8 @@ Compiler_Features_25_Test
 Compiler_Features_26_Test
 Compiler_Features_27_Test
 Compiler_Features_28_Test
+Compiler_Features_29_Test
+Compiler_Features_30_Test
 Config_Test: !LynxOS !VxWorks !ACE_FOR_TAO
 Conn_Test: !ACE_FOR_TAO
 DLL_Test: !STATIC Linux
